--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Secure the Vault</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
+  <script defer src="index.js"></script>
   <body>
-    <h1>Check the console :)</h1>
+    <h1>Check the console :</h1>
   </body>
 </html>
